# privacy-pipeline

./: .gitignore  README.md  cfg_map.py  classification_pipeline.py  cwru_experiment.ipynb  cwru_experiment.yaml  experiment.ipynb  experiment.yaml  experiment_paderborn.ipynb  experiment_paderborn.yaml  extract_paderborn.py  grap_privacy_pipeline_final-forbNorm.ipynb  graph_privacy_pipeline_final-k5-a07.ipynb  labeled_features.csv  loader.py  metadata.csv  ml_pipeline.py  neigbourhood_viz.py  paderborn_experiment.ipynb  paderborn_experiment.yaml  pipeline.ipynb  plot_data_distribution.py  pyproject.toml  records_baseline.csv  records_fiedler.csv  records_metrics.csv  specral_privacy_pipeline.py  test_spec_pipeline.ipynb
previous_tests/: grap_privacy_pipeline_final-forbNorm.ipynb  graph_privacy_pipeline_final.ipynb  graph_privacy_pipeline_graph_dp.ipynb
privacy_pipeline/: __init__.py  comparison.py  config.py  evaluate.py  experiment.py  features.py  graph.py  noise.py  pipelines.py  visualize.py
